--- a/package.json
+++ b/package.json
@@ -11,8 +11,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
+    "add": "^2.0.6",
+    "bcryptjs": "^2.4.3",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.438.0",
+    "mongoose": "^8.6.1",
+    "openssl": "^2.0.0",
     "chart.js": "^4.4.4",
     "next": "14.2.7",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
@@ -20,10 +27,13 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
